# lz77-algorithm

./: CMakeLists.txt  README.md  decompressed.txt  functions.cpp  functions.h  lz77.cpp  lz77.h  main.cpp  main.h  output.txt  parameters.cpp  parameters.h
