cmake_minimum_required(VERSION 3.26)
project(lz77)

set(CMAKE_CXX_STANDARD 14)

add_executable(lz77
        main.cpp
        functions.h
        functions.cpp
        main.cpp
        functions.h
        parameters.h
        parameters.cpp
        main.h
        lz77.cpp
        lz77.h
        functions.cpp
)
